# calculator

./: .gitignore  CMakeLists.txt  README.md  README_zh_CN.md
src/: calculator.c  calculator.h  callback.c  interface.c  main.c
